--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.485.0",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
